Flask to fast api update and prepare production mode

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,16 @@
-Flask>=2.0
-Flask-SQLAlchemy>=2.5
-Flask-Migrate>=3.0
-Flask-Cors>=3.0
-SQLAlchemy>=1.4
-reportlab>=3.6
-spacy>=3.5
+# FastAPI et serveur
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+
+# Base de données
+sqlalchemy>=2.0.23
+
+# Validation
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+
+# NLP (optionnel, pour analyse de manuscrits)
+spacy>=3.7.0
+
+# Pour le développement
+python-multipart>=0.0.6
